[package]
name = "strdeploy"
version = "0.1.0"
edition = "2021"
description = "IlHarper Infrastructure Deploy | Deploy Resources in Seconds"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
env_logger = { version = "0.10.0", feature = [] }
log = { version = "0.4.17", feature = ["std", "max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0.152", feature = ["std", "derive"] }
serde_yaml = { version = "0.9.17", feature = [] }
